--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
+/* Reset legacy scaffold styles that interfered with dashboard layout */
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  margin: 0;
+  padding: 0;
+  text-align: initial;
 }
 
 .logo {
